--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         "component": "views/home",
         "props": {
           "errors": {},
-          "name": "Tung Tung Tung Sahur",
+          "name": "Cặc",
           "quote": {
             "message": "",
             "author": ""
@@ -65,8 +65,8 @@
             "color": "#ff0019",
             "messages": [
               "Tung Tung Tung Sahur",
-              "Test 1",
-              "Test 2"
+              "Tralero Tralala",
+              "BomBadino Crocodino"
             ],
             "music": "/music.mp3"
           },
